# forgejo-mcp-rs

./: Cargo.toml  README.md  SPECIFICATION.md  clippy.toml  deny.toml  server.json
.forgejo/workflows/: ci.yml
.githooks/: pre-commit  pre-push
contrib/claude-code-write-mode/: README.md  settings.snippet.json  statusline.sh  write-mode-hook.sh
crates/forgejo-mcp/: Cargo.toml  README.md
crates/forgejo-mcp/src/: main.rs  server.rs  tools.rs
crates/forgejo-mcp/src/forge/: mod.rs
crates/mcp-core/: Cargo.toml
crates/mcp-core/src/: elevation.rs  error.rs  helpers.rs  lib.rs  rest.rs
crates/woodpecker-mcp/: Cargo.toml
crates/woodpecker-mcp/src/: client.rs  main.rs  server.rs  tools.rs
src/: lib.rs  main.rs  server.rs  tools.rs
src/forge/: error.rs  mod.rs
src/forgejo/: client.rs  mod.rs  server.rs  tools.rs
src/mcp_core/: error.rs  helpers.rs  mod.rs  rest.rs  tokens.rs
src/woodpecker/: client.rs  mod.rs  server.rs  tools.rs
