[package]
name = "forgejo-mcp-rs"
description = "Model Context Protocol server for Forgejo / Codeberg, in Rust."
version = "0.8.0"
edition = "2024"
# 1.88: required by `time` >= 0.3.47, the first release fixing RUSTSEC-2026-0009.
rust-version = "1.88"
license = "MIT"
repository = "https://codeberg.org/brechanbech/forgejo-mcp-rs"
authors = ["Stefan Ractliffe"]
readme = "README.md"
keywords = ["mcp", "forgejo", "codeberg", "git", "ai"]
categories = ["development-tools", "api-bindings"]

[[bin]]
name = "forgejo-mcp-rs"
path = "src/main.rs"

[lints.rust]
# This server reaches Forgejo over HTTPS — there is no reason to write `unsafe`, so forbid
# it outright (stronger than `deny`: an inner `allow` can't undo it).
unsafe_code = "forbid"
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
# --- MCP ---
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }

# --- Forgejo / Codeberg REST (in-house thin client over reqwest) ---
reqwest = { version = "0.12", features = ["json"] }
url = "2"
zeroize = "1"

# --- async runtime ---
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal"] }

# --- (de)serialization & schema ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# --- errors / logging ---
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
debug = "line-tables-only"
