[package]
name = "mcp-core"
description = "Shared MCP-server scaffolding: a thin REST client, time-boxed write-mode elevation, pagination, and result helpers."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rmcp = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
