[package]
name = "woodpecker-mcp"
description = "Model Context Protocol server for Woodpecker CI, in Rust. (Skeleton — endpoints land in a later step.)"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "woodpecker-mcp"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Shared REST client, write-mode elevation, pagination & result helpers — the whole point of the
# workspace split. The Woodpecker endpoint set + tools build on top of this in a later step.
mcp-core = { workspace = true }
tracing = { workspace = true }
