[package]
name = "woodpecker-mcp"
description = "Model Context Protocol server for Woodpecker CI, in Rust."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "woodpecker-mcp"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Shared REST client, write-mode elevation, pagination & result helpers.
mcp-core = { workspace = true }

# --- MCP ---
rmcp = { workspace = true }

# --- URL parsing ---
url = { workspace = true }

# --- async runtime ---
tokio = { workspace = true }

# --- (de)serialization & schema ---
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# --- errors / logging ---
anyhow = { workspace = true }
tracing = { workspace = true }
